LINVAST.Imperative/Builders/Pseudo/ANTLR/PseudoParser.cs
#nullable disable
namespace LINVAST.Imperative.Builders.Pseudo
{
    //------------------------------------------------------------------------------
    // <auto-generated>
    //     This code was generated by a tool.
    //     ANTLR Version: 4.7.1
    //
    //     Changes to this file may cause incorrect behavior and will be lost if
    //     the code is regenerated.
    // </auto-generated>
    //------------------------------------------------------------------------------

    // Generated from Pseudo.g4 by ANTLR 4.7.1

    // Unreachable code detected
#pragma warning disable 0162
    // The variable '...' is assigned but its value is never used
#pragma warning disable 0219
    // Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
    // Ambiguous reference in cref attribute
#pragma warning disable 419

    using System;
    using System.IO;
    using Antlr4.Runtime;
    using Antlr4.Runtime.Atn;
    using Antlr4.Runtime.Misc;
    using Antlr4.Runtime.Tree;
    using DFA = Antlr4.Runtime.Dfa.DFA;

    [System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]

    public partial class PseudoParser : Parser
    {
        protected static DFA[] decisionToDFA;
        protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
        public const int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
            T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45,
            T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, NAME = 51, STRING = 52,
            INT = 53, HEX = 54, FLOAT = 55, HEX_FLOAT = 56, BlockComment = 57, LineComment = 58,
            WS = 59;
        public const int
            RULE_unit = 0, RULE_block = 1, RULE_statement = 2, RULE_declaration = 3,
            RULE_parlist = 4, RULE_assignment = 5, RULE_exp = 6, RULE_aexp = 7, RULE_lexp = 8,
            RULE_aop = 9, RULE_rop = 10, RULE_lop = 11, RULE_uop = 12, RULE_cexp = 13,
            RULE_explist = 14, RULE_literal = 15, RULE_type = 16, RULE_typename = 17,
            RULE_var = 18, RULE_iexp = 19;
        public static readonly string[] ruleNames = {
        "unit", "block", "statement", "declaration", "parlist", "assignment",
        "exp", "aexp", "lexp", "aop", "rop", "lop", "uop", "cexp", "explist",
        "literal", "type", "typename", "var", "iexp"
    };

        private static readonly string[] _LiteralNames = {
        null, "'algorithm'", "'begin'", "'end'", "'pass'", "'return'", "'error'",
        "'if'", "'then'", "'else'", "'while'", "'do'", "'repeat'", "'until'",
        "'increment'", "'decrement'", "'declare'", "'='", "'procedure'", "'('",
        "')'", "'function'", "'returning'", "':'", "','", "'True'", "'False'",
        "'+'", "'-'", "'*'", "'/'", "'div'", "'mod'", "'>'", "'>='", "'<'", "'<='",
        "'=='", "'=/='", "'and'", "'or'", "'not'", "'call'", "'array'", "'list'",
        "'set'", "'integer'", "'real'", "'string'", "'['", "']'"
    };
        private static readonly string[] _SymbolicNames = {
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, "NAME", "STRING", "INT", "HEX", "FLOAT", "HEX_FLOAT",
        "BlockComment", "LineComment", "WS"
    };
        public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

        [NotNull]
        public override IVocabulary Vocabulary {
            get {
                return DefaultVocabulary;
            }
        }

        public override string GrammarFileName { get { return "Pseudo.g4"; } }

        public override string[] RuleNames { get { return ruleNames; } }

        public override string SerializedAtn { get { return new string(_serializedATN); } }

        static PseudoParser()
        {
            decisionToDFA = new DFA[_ATN.NumberOfDecisions];
            for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
                decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
            }
        }

        public PseudoParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

        public PseudoParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
        : base(input, output, errorOutput)
        {
            Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
        }
        public partial class UnitContext : ParserRuleContext
        {
            public ITerminalNode NAME() { return GetToken(PseudoParser.NAME, 0); }
            public BlockContext block()
            {
                return GetRuleContext<BlockContext>(0);
            }
            public ITerminalNode Eof() { return GetToken(PseudoParser.Eof, 0); }
            public UnitContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_unit; } }
            public override void EnterRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.EnterUnit(this);
            }
            public override void ExitRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.ExitUnit(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPseudoVisitor<TResult> typedVisitor = visitor as IPseudoVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitUnit(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public UnitContext unit()
        {
            UnitContext _localctx = new UnitContext(Context, State);
            EnterRule(_localctx, 0, RULE_unit);
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 40; Match(T__0);
                    State = 41; Match(NAME);
                    State = 42; block();
                    State = 43; Match(Eof);
                }
            } catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            } finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class BlockContext : ParserRuleContext
        {
            public StatementContext[] statement()
            {
                return GetRuleContexts<StatementContext>();
            }
            public StatementContext statement(int i)
            {
                return GetRuleContext<StatementContext>(i);
            }
            public BlockContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_block; } }
            public override void EnterRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.EnterBlock(this);
            }
            public override void ExitRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.ExitBlock(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPseudoVisitor<TResult> typedVisitor = visitor as IPseudoVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitBlock(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public BlockContext block()
        {
            BlockContext _localctx = new BlockContext(Context, State);
            EnterRule(_localctx, 2, RULE_block);
            int _la;
            try {
                State = 54;
                ErrorHandler.Sync(this);
                switch (TokenStream.LA(1)) {
                    case T__1:
                        EnterOuterAlt(_localctx, 1); {
                            State = 45; Match(T__1);
                            State = 47;
                            ErrorHandler.Sync(this);
                            _la = TokenStream.LA(1);
                            do {
                                {
                                    {
                                        State = 46; statement();
                                    }
                                }
                                State = 49;
                                ErrorHandler.Sync(this);
                                _la = TokenStream.LA(1);
                            } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__9) | (1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << T__20) | (1L << T__41) | (1L << NAME))) != 0));
                            State = 51; Match(T__2);
                        }
                        break;
                    case T__3:
                    case T__4:
                    case T__5:
                    case T__6:
                    case T__9:
                    case T__11:
                    case T__13:
                    case T__14:
                    case T__15:
                    case T__17:
                    case T__20:
                    case T__41:
                    case NAME:
                        EnterOuterAlt(_localctx, 2); {
                            State = 53; statement();
                        }
                        break;
                    default:
                        throw new NoViableAltException(this);
                }
            } catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            } finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class StatementContext : ParserRuleContext
        {
            public DeclarationContext declaration()
            {
                return GetRuleContext<DeclarationContext>(0);
            }
            public AssignmentContext assignment()
            {
                return GetRuleContext<AssignmentContext>(0);
            }
            public CexpContext cexp()
            {
                return GetRuleContext<CexpContext>(0);
            }
            public ExpContext exp()
            {
                return GetRuleContext<ExpContext>(0);
            }
            public ITerminalNode STRING() { return GetToken(PseudoParser.STRING, 0); }
            public BlockContext[] block()
            {
                return GetRuleContexts<BlockContext>();
            }
            public BlockContext block(int i)
            {
                return GetRuleContext<BlockContext>(i);
            }
            public VarContext var()
            {
                return GetRuleContext<VarContext>(0);
            }
            public StatementContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_statement; } }
            public override void EnterRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.EnterStatement(this);
            }
            public override void ExitRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.ExitStatement(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPseudoVisitor<TResult> typedVisitor = visitor as IPseudoVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitStatement(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public StatementContext statement()
        {
            StatementContext _localctx = new StatementContext(Context, State);
            EnterRule(_localctx, 4, RULE_statement);
            int _la;
            try {
                State = 84;
                ErrorHandler.Sync(this);
                switch (TokenStream.LA(1)) {
                    case T__3:
                        EnterOuterAlt(_localctx, 1); {
                            State = 56; Match(T__3);
                        }
                        break;
                    case T__15:
                    case T__17:
                    case T__20:
                        EnterOuterAlt(_localctx, 2); {
                            State = 57; declaration();
                        }
                        break;
                    case NAME:
                        EnterOuterAlt(_localctx, 3); {
                            State = 58; assignment();
                        }
                        break;
                    case T__41:
                        EnterOuterAlt(_localctx, 4); {
                            State = 59; cexp();
                        }
                        break;
                    case T__4:
                        EnterOuterAlt(_localctx, 5); {
                            State = 60; Match(T__4);
                            State = 61; exp(0);
                        }
                        break;
                    case T__5:
                        EnterOuterAlt(_localctx, 6); {
                            State = 62; Match(T__5);
                            State = 63; Match(STRING);
                        }
                        break;
                    case T__6:
                        EnterOuterAlt(_localctx, 7); {
                            State = 64; Match(T__6);
                            State = 65; exp(0);
                            State = 66; Match(T__7);
                            State = 67; block();
                            State = 70;
                            ErrorHandler.Sync(this);
                            switch (Interpreter.AdaptivePredict(TokenStream, 2, Context)) {
                                case 1: {
                                    State = 68; Match(T__8);
                                    State = 69; block();
                                }
                                break;
                            }
                        }
                        break;
                    case T__9:
                        EnterOuterAlt(_localctx, 8); {
                            State = 72; Match(T__9);
                            State = 73; exp(0);
                            State = 74; Match(T__10);
                            State = 75; block();
                        }
                        break;
                    case T__11:
                        EnterOuterAlt(_localctx, 9); {
                            State = 77; Match(T__11);
                            State = 78; block();
                            State = 79; Match(T__12);
                            State = 80; exp(0);
                        }
                        break;
                    case T__13:
                    case T__14:
                        EnterOuterAlt(_localctx, 10); {
                            State = 82;
                            _la = TokenStream.LA(1);
                            if (!(_la == T__13 || _la == T__14)) {
                                ErrorHandler.RecoverInline(this);
                            } else {
                                ErrorHandler.ReportMatch(this);
                                Consume();
                            }
                            State = 83; var();
                        }
                        break;
                    default:
                        throw new NoViableAltException(this);
                }
            } catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            } finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class DeclarationContext : ParserRuleContext
        {
            public TypeContext type()
            {
                return GetRuleContext<TypeContext>(0);
            }
            public ITerminalNode NAME() { return GetToken(PseudoParser.NAME, 0); }
            public ExpContext exp()
            {
                return GetRuleContext<ExpContext>(0);
            }
            public BlockContext block()
            {
                return GetRuleContext<BlockContext>(0);
            }
            public ParlistContext parlist()
            {
                return GetRuleContext<ParlistContext>(0);
            }
            public DeclarationContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_declaration; } }
            public override void EnterRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.EnterDeclaration(this);
            }
            public override void ExitRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.ExitDeclaration(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPseudoVisitor<TResult> typedVisitor = visitor as IPseudoVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public DeclarationContext declaration()
        {
            DeclarationContext _localctx = new DeclarationContext(Context, State);
            EnterRule(_localctx, 6, RULE_declaration);
            int _la;
            try {
                State = 112;
                ErrorHandler.Sync(this);
                switch (TokenStream.LA(1)) {
                    case T__15:
                        EnterOuterAlt(_localctx, 1); {
                            State = 86; Match(T__15);
                            State = 87; type();
                            State = 88; Match(NAME);
                            State = 91;
                            ErrorHandler.Sync(this);
                            _la = TokenStream.LA(1);
                            if (_la == T__16) {
                                {
                                    State = 89; Match(T__16);
                                    State = 90; exp(0);
                                }
                            }

                        }
                        break;
                    case T__17:
                        EnterOuterAlt(_localctx, 2); {
                            State = 93; Match(T__17);
                            State = 94; Match(NAME);
                            State = 95; Match(T__18);
                            State = 97;
                            ErrorHandler.Sync(this);
                            _la = TokenStream.LA(1);
                            if (_la == NAME) {
                                {
                                    State = 96; parlist();
                                }
                            }

                            State = 99; Match(T__19);
                            State = 100; block();
                        }
                        break;
                    case T__20:
                        EnterOuterAlt(_localctx, 3); {
                            State = 101; Match(T__20);
                            State = 102; Match(NAME);
                            State = 103; Match(T__18);
                            State = 105;
                            ErrorHandler.Sync(this);
                            _la = TokenStream.LA(1);
                            if (_la == NAME) {
                                {
                                    State = 104; parlist();
                                }
                            }

                            State = 107; Match(T__19);
                            State = 108; Match(T__21);
                            State = 109; type();
                            State = 110; block();
                        }
                        break;
                    default:
                        throw new NoViableAltException(this);
                }
            } catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            } finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class ParlistContext : ParserRuleContext
        {
            public ITerminalNode[] NAME() { return GetTokens(PseudoParser.NAME); }
            public ITerminalNode NAME(int i)
            {
                return GetToken(PseudoParser.NAME, i);
            }
            public TypeContext[] type()
            {
                return GetRuleContexts<TypeContext>();
            }
            public TypeContext type(int i)
            {
                return GetRuleContext<TypeContext>(i);
            }
            public ParlistContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_parlist; } }
            public override void EnterRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.EnterParlist(this);
            }
            public override void ExitRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.ExitParlist(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPseudoVisitor<TResult> typedVisitor = visitor as IPseudoVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitParlist(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public ParlistContext parlist()
        {
            ParlistContext _localctx = new ParlistContext(Context, State);
            EnterRule(_localctx, 8, RULE_parlist);
            int _la;
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 114; Match(NAME);
                    State = 115; Match(T__22);
                    State = 116; type();
                    State = 123;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    while (_la == T__23) {
                        {
                            {
                                State = 117; Match(T__23);
                                State = 118; Match(NAME);
                                State = 119; Match(T__22);
                                State = 120; type();
                            }
                        }
                        State = 125;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                    }
                }
            } catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            } finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class AssignmentContext : ParserRuleContext
        {
            public VarContext var()
            {
                return GetRuleContext<VarContext>(0);
            }
            public ExpContext exp()
            {
                return GetRuleContext<ExpContext>(0);
            }
            public AssignmentContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_assignment; } }
            public override void EnterRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.EnterAssignment(this);
            }
            public override void ExitRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.ExitAssignment(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPseudoVisitor<TResult> typedVisitor = visitor as IPseudoVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public AssignmentContext assignment()
        {
            AssignmentContext _localctx = new AssignmentContext(Context, State);
            EnterRule(_localctx, 10, RULE_assignment);
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 126; var();
                    State = 127; Match(T__16);
                    State = 128; exp(0);
                }
            } catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            } finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class ExpContext : ParserRuleContext
        {
            public LiteralContext literal()
            {
                return GetRuleContext<LiteralContext>(0);
            }
            public VarContext var()
            {
                return GetRuleContext<VarContext>(0);
            }
            public ExpContext[] exp()
            {
                return GetRuleContexts<ExpContext>();
            }
            public ExpContext exp(int i)
            {
                return GetRuleContext<ExpContext>(i);
            }
            public UopContext uop()
            {
                return GetRuleContext<UopContext>(0);
            }
            public CexpContext cexp()
            {
                return GetRuleContext<CexpContext>(0);
            }
            public AopContext aop()
            {
                return GetRuleContext<AopContext>(0);
            }
            public RopContext rop()
            {
                return GetRuleContext<RopContext>(0);
            }
            public LopContext lop()
            {
                return GetRuleContext<LopContext>(0);
            }
            public ExpContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_exp; } }
            public override void EnterRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.EnterExp(this);
            }
            public override void ExitRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.ExitExp(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPseudoVisitor<TResult> typedVisitor = visitor as IPseudoVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitExp(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public ExpContext exp()
        {
            return exp(0);
        }

        private ExpContext exp(int _p)
        {
            ParserRuleContext _parentctx = Context;
            int _parentState = State;
            ExpContext _localctx = new ExpContext(Context, _parentState);
            ExpContext _prevctx = _localctx;
            int _startState = 12;
            EnterRecursionRule(_localctx, 12, RULE_exp, _p);
            try {
                int _alt;
                EnterOuterAlt(_localctx, 1);
                {
                    State = 141;
                    ErrorHandler.Sync(this);
                    switch (TokenStream.LA(1)) {
                        case T__24:
                        case T__25:
                        case STRING:
                        case INT:
                        case HEX:
                        case FLOAT:
                        case HEX_FLOAT: {
                            State = 131; literal();
                        }
                        break;
                        case NAME: {
                            State = 132; var();
                        }
                        break;
                        case T__18: {
                            State = 133; Match(T__18);
                            State = 134; exp(0);
                            State = 135; Match(T__19);
                        }
                        break;
                        case T__27:
                        case T__40: {
                            State = 137; uop();
                            State = 138; exp(2);
                        }
                        break;
                        case T__41: {
                            State = 140; cexp();
                        }
                        break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    Context.Stop = TokenStream.LT(-1);
                    State = 157;
                    ErrorHandler.Sync(this);
                    _alt = Interpreter.AdaptivePredict(TokenStream, 11, Context);
                    while (_alt != 2 && _alt != global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER) {
                        if (_alt == 1) {
                            if (ParseListeners != null)
                                TriggerExitRuleEvent();
                            _prevctx = _localctx;
                            {
                                State = 155;
                                ErrorHandler.Sync(this);
                                switch (Interpreter.AdaptivePredict(TokenStream, 10, Context)) {
                                    case 1: {
                                        _localctx = new ExpContext(_parentctx, _parentState);
                                        PushNewRecursionContext(_localctx, _startState, RULE_exp);
                                        State = 143;
                                        if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
                                        State = 144; aop();
                                        State = 145; exp(6);
                                    }
                                    break;
                                    case 2: {
                                        _localctx = new ExpContext(_parentctx, _parentState);
                                        PushNewRecursionContext(_localctx, _startState, RULE_exp);
                                        State = 147;
                                        if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
                                        State = 148; rop();
                                        State = 149; exp(5);
                                    }
                                    break;
                                    case 3: {
                                        _localctx = new ExpContext(_parentctx, _parentState);
                                        PushNewRecursionContext(_localctx, _startState, RULE_exp);
                                        State = 151;
                                        if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
                                        State = 152; lop();
                                        State = 153; exp(4);
                                    }
                                    break;
                                }
                            }
                        }
                        State = 159;
                        ErrorHandler.Sync(this);
                        _alt = Interpreter.AdaptivePredict(TokenStream, 11, Context);
                    }
                }
            } catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            } finally {
                UnrollRecursionContexts(_parentctx);
            }
            return _localctx;
        }

        public partial class AexpContext : ParserRuleContext
        {
            public ExpContext[] exp()
            {
                return GetRuleContexts<ExpContext>();
            }
            public ExpContext exp(int i)
            {
                return GetRuleContext<ExpContext>(i);
            }
            public AopContext aop()
            {
                return GetRuleContext<AopContext>(0);
            }
            public AexpContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_aexp; } }
            public override void EnterRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.EnterAexp(this);
            }
            public override void ExitRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.ExitAexp(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPseudoVisitor<TResult> typedVisitor = visitor as IPseudoVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitAexp(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public AexpContext aexp()
        {
            AexpContext _localctx = new AexpContext(Context, State);
            EnterRule(_localctx, 14, RULE_aexp);
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 160; exp(0);
                    State = 161; aop();
                    State = 162; exp(0);
                }
            } catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            } finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class LexpContext : ParserRuleContext
        {
            public ExpContext[] exp()
            {
                return GetRuleContexts<ExpContext>();
            }
            public ExpContext exp(int i)
            {
                return GetRuleContext<ExpContext>(i);
            }
            public LopContext lop()
            {
                return GetRuleContext<LopContext>(0);
            }
            public LexpContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_lexp; } }
            public override void EnterRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.EnterLexp(this);
            }
            public override void ExitRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.ExitLexp(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPseudoVisitor<TResult> typedVisitor = visitor as IPseudoVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitLexp(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public LexpContext lexp()
        {
            LexpContext _localctx = new LexpContext(Context, State);
            EnterRule(_localctx, 16, RULE_lexp);
            try {
                State = 170;
                ErrorHandler.Sync(this);
                switch (Interpreter.AdaptivePredict(TokenStream, 12, Context)) {
                    case 1:
                        EnterOuterAlt(_localctx, 1); {
                            State = 164; Match(T__24);
                        }
                        break;
                    case 2:
                        EnterOuterAlt(_localctx, 2); {
                            State = 165; Match(T__25);
                        }
                        break;
                    case 3:
                        EnterOuterAlt(_localctx, 3); {
                            State = 166; exp(0);
                            State = 167; lop();
                            State = 168; exp(0);
                        }
                        break;
                }
            } catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            } finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class AopContext : ParserRuleContext
        {
            public AopContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_aop; } }
            public override void EnterRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.EnterAop(this);
            }
            public override void ExitRule(IParseTreeListener listener)
            {
                IPseudoListener typedListener = listener as IPseudoListener;
                if (typedListener != null) typedListener.ExitAop(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPseudoVisitor<TResult> typedVisitor = visitor as IPseudoVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitAop(this);
                else return visitor.VisitChildren(this);
            }
        }
